--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>My skill set includes programming in Python, Java, SQL, and C, as well as expertise in data science tools like PowerBI, Numpy, and Pandas. Beyond academics, I have authored a research paper published in a Scopus-indexed Springer series and hold accolades like NTSE stage 2 qualification and winning the Asia Essay Competition by UNESCO.</p>
             </div>
             <div class="profile-image">
-                <img src="C:\Users\anush\OneDrive\Desktop\clg_work\acr\resume_pic.jpeg" alt="Anushka Kale">
+                <img src="resume_pic.jpeg" alt="Anushka Kale">
             </div>
         </section>
 
